--- a/assets/css/izeetak-responsive.css
+++ b/assets/css/izeetak-responsive.css
@@ -1203,7 +1203,7 @@
 
     .main-menu .mobile-nav__toggler {
         margin-right: 0;
-        padding: 33px 0;
+        padding: 1rem 0;
         display: inline-block;
     }
 
@@ -1243,7 +1243,7 @@
 
     .main-menu .mobile-nav__toggler {
         margin-right: 0;
-        padding: 33px 0;
+        padding: 1rem 0;
         display: inline-block;
     }
 
@@ -1294,7 +1294,7 @@
 
     .main-menu .mobile-nav__toggler {
         margin-right: 0;
-        padding: 33px 0;
+        padding: 1rem 0;
         display: inline-block;
     }
 
